src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  ul,
  ol {
    list-style: revert;
  }
}

:root {
  --background: #ffffff;

  --color-gray-100: #ffffff;
  --color-gray-150: #f5f5f6;
  --color-gray-200: #eeeeee;
  --color-gray-300: #d0d0d0;
  --color-gray-400: #aaaaaa;
  --color-gray-500: #999999;
  --color-gray-600: #838383;
  --color-gray-700: #757575;
  --color-gray-800: #333333;
  --color-gray-900: #000000;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #19191d;

    --color-gray-100: #000000;
    --color-gray-150: #19191d;
    --color-gray-200: #25272b;
    --color-gray-300: #2d2e31;
    --color-gray-400: #47494d;
    --color-gray-500: #767778;
    --color-gray-600: #9d9d9e;
    --color-gray-700: #cacacc;
    --color-gray-800: #dfdfe0;
    --color-gray-900: #ffffff;
  }
}

